made it so that the input element will be white no matter which device you're using this site

--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ html {
     font-size: 1.5rem;
     cursor: url("text.png"), auto;
     margin-top: 25px;
+    background: white;
   }
   .img {
     margin-bottom: 60px;
